--- a/Style-Sheets/index-styles.css
+++ b/Style-Sheets/index-styles.css
@@ -971,7 +971,7 @@ footer {
     .navbar {
         flex-direction: column;
         height: auto;
-        padding: 10px 20px;
+        
         align-items: flex-start;
     }
     
@@ -988,6 +988,7 @@ footer {
     background-color: rgba(255, 255, 255, 0.98);
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    
 }
     
     .navbar ul.show {
@@ -1002,6 +1003,11 @@ footer {
         font-size: 8px;
     }
     
+    .navbar ul li a{
+      padding: 0px;
+    }
+
+
     .navbar ul li:last-child {
         border-bottom: none;
     }
@@ -1150,6 +1156,7 @@ footer {
     .navbar {
         padding: 8px 15px;
     }
+    
     
     .logo img {
         width: 80px;
