Final Mobile Hamburger Fixes

--- a/Style-Sheets/ss-styles.css
+++ b/Style-Sheets/ss-styles.css
@@ -828,10 +828,15 @@ footer {
     }
     
     .navbar ul {
+          position: absolute; /* Add this */
+        top: 100%; /* Position below navbar */
+        left: 0;
+        right: 0;
+        z-index: 1000; /* Ensure it appears above other content */
         display: none;
         flex-direction: column;
         width: 100%;
-        margin-top: 15px;
+        margin-top: 0; /* Remove margin since it's positioned absolutely */
         background-color: rgba(255, 255, 255, 0.98);
         border-radius: 10px;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
@@ -853,7 +858,7 @@ footer {
     }
     
     .navbar ul li a {
-        padding: 15px 20px;
+        
         display: block;
         width: 100%;
     }
@@ -1517,11 +1522,7 @@ footer {
     }
     
     /* Improved touch targets for navigation */
-    .navbar ul li a {
-        padding: 15px 20px;
-        display: block;
-        width: 100%;
-    }
+
     
     /* Better spacing for mobile cards */
     .program-card {
